--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
-    color: white;
-    background-color: black;
+    color: rgb(187, 255, 29);
+    background-color: rgb(3, 150, 27);
     font-family: "Chakra Petch", sans-serif;
    margin: 50px;}
 
