--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
     color: rgb(164, 206, 255);
     background-color: rgb(0, 0, 0);
     font-family: "Chakra Petch", sans-serif;
-   margin: 50px;}
+   margin: 40px;}
 
 h1{font-size: 40px;}
 
@@ -11,7 +11,7 @@ p{font-size: 20px;}
 header{
     border-bottom: solid 2px rgb(4, 198, 37);
     padding: 20px;
-    font-size: 25px;
+    font-size: 35px;
     color: rgb(51, 29, 198);}
 
 .chamada{
@@ -26,7 +26,11 @@ header{
 }
 
 img {
-  height: 200px;
+  height: 20px;
+
+padding-left: 20px;
+padding-right: 20px;
+
 }
 
 .categoriavideos {
